--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Agenda</a>
+  <a class="navbar-brand" href="/">Lugares</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -10,7 +10,7 @@
       
       <% if(user) { %>
         <li class="nav-item">
-          <a class="nav-link" href="/contato">Cadastrar contato</a>
+          <a class="nav-link" href="/place">Cadastrar lugar</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/login/logout">Sair</a>
