--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
         <div class="col-lg-2"></div>
 
         <div class="col-lg-8 my-3">
-          <h1 class="text-center">Lugares</h1>
+          <h1 class="text-center">Lugares para visitarmos</h1>
           
           <%- include('includes/messages'); %>
           <% if(lugares.length> 0) { %>
